// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedSystemsTable should render bulk select disabled correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(SystemsTable)
        bulkSelectDisabled={true}
        createBaselineModal={false}
        entities={
          Object {
            "columns": Array [
              Object {
                "key": "display_name",
                "title": "Name",
              },
              Object {
                "key": "tags",
                "title": "Tags",
              },
              Object {
                "key": "updated",
                "title": "Last seen",
              },
              Object {
                "key": "historical_profiles",
                "title": "Historical profiles",
              },
            ],
            "count": 3,
            "rows": Array [
              Object {
                "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:56.253419+00:00",
              },
              Object {
                "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.952780+00:00",
              },
              Object {
                "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.686193+00:00",
              },
            ],
            "selectedSystemIds": Array [],
            "total": 3,
          }
        }
        hasHistoricalDropdown={false}
        hasMultiSelect={true}
        historicalProfiles={Array []}
        permissions={
          Object {
            "inventoryRead": true,
          }
        }
        selectVariant="checkbox"
        selectedSystemIds={Array []}
      >
        <SystemsTable
          bulkSelectDisabled={true}
          createBaselineModal={false}
          driftClearFilters={[Function]}
          entities={
            Object {
              "columns": Array [
                Object {
                  "key": "display_name",
                  "title": "Name",
                },
                Object {
                  "key": "tags",
                  "title": "Tags",
                },
                Object {
                  "key": "updated",
                  "title": "Last seen",
                },
                Object {
                  "key": "historical_profiles",
                  "title": "Historical profiles",
                },
              ],
              "count": 3,
              "rows": Array [
                Object {
                  "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                  "tags": Array [
                    Object {
                      "key": "group",
                      "namespace": "insights-client",
                      "value": "XmygroupX",
                    },
                  ],
                  "updated": "2020-10-13T16:17:56.253419+00:00",
                },
                Object {
                  "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                  "tags": Array [
                    Object {
                      "key": "group",
                      "namespace": "insights-client",
                      "value": "XmygroupX",
                    },
                  ],
                  "updated": "2020-10-13T16:17:54.952780+00:00",
                },
                Object {
                  "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                  "tags": Array [
                    Object {
                      "key": "group",
                      "namespace": "insights-client",
                      "value": "XmygroupX",
                    },
                  ],
                  "updated": "2020-10-13T16:17:54.686193+00:00",
                },
              ],
              "selectedSystemIds": Array [],
              "total": 3,
            }
          }
          hasHistoricalDropdown={false}
          hasMultiSelect={true}
          historicalProfiles={Array []}
          permissions={
            Object {
              "inventoryRead": true,
            }
          }
          selectEntities={[Function]}
          selectHistoricProfiles={[Function]}
          selectSingleHSP={[Function]}
          selectVariant="checkbox"
          selectedSystemIds={Array []}
          setSelectedSystemIds={[Function]}
        >
          <div
            className="inventory-toolbar-no-padding"
          >
            <ForwardRef
              bulkSelect={
                Object {
                  "checked": false,
                  "count": 0,
                  "id": "systems-bulk-select",
                  "isDisabled": true,
                  "items": Array [
                    Object {
                      "onClick": [Function],
                      "title": "Select none (0)",
                    },
                    Object {
                      "onClick": [Function],
                      "title": "Select page (3)",
                    },
                    Object {
                      "onClick": [Function],
                      "title": "Select all (3)",
                    },
                  ],
                  "onSelect": [Function],
                  "toggleProps": null,
                }
              }
              component="section"
              customFilters={
                Object {
                  "filter": Object {
                    "system_profile": Object {},
                  },
                  "tags": undefined,
                }
              }
              fallback={
                <Bullseye
                  className="pf-u-p-lg"
                >
                  <Spinner
                    size="xl"
                  />
                </Bullseye>
              }
              getEntities={[Function]}
              noDetail={true}
              onLoad={[Function]}
              showTags={true}
              tableProps={
                Object {
                  "canSelectAll": false,
                  "className": "inventory-align",
                  "isStickyHeader": true,
                  "ouiaId": "systems-table",
                  "selectVariant": "checkbox",
                }
              }
            >
              <BaseInvTable
                bulkSelect={
                  Object {
                    "checked": false,
                    "count": 0,
                    "id": "systems-bulk-select",
                    "isDisabled": true,
                    "items": Array [
                      Object {
                        "onClick": [Function],
                        "title": "Select none (0)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Select page (3)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Select all (3)",
                      },
                    ],
                    "onSelect": [Function],
                    "toggleProps": null,
                  }
                }
                component="section"
                customFilters={
                  Object {
                    "filter": Object {
                      "system_profile": Object {},
                    },
                    "tags": undefined,
                  }
                }
                fallback={
                  <Bullseye
                    className="pf-u-p-lg"
                  >
                    <Spinner
                      size="xl"
                    />
                  </Bullseye>
                }
                getEntities={[Function]}
                innerRef={null}
                noDetail={true}
                onLoad={[Function]}
                showTags={true}
                tableProps={
                  Object {
                    "canSelectAll": false,
                    "className": "inventory-align",
                    "isStickyHeader": true,
                    "ouiaId": "systems-table",
                    "selectVariant": "checkbox",
                  }
                }
              >
                <section
                  className="inventory"
                >
                  <Suspense
                    fallback={
                      <Bullseye
                        className="pf-u-p-lg"
                      >
                        <Spinner
                          size="xl"
                        />
                      </Bullseye>
                    }
                  >
                    <ForwardRef
                      ErrorComponent={
                        <InventoryLoadError
                          bulkSelect={
                            Object {
                              "checked": false,
                              "count": 0,
                              "id": "systems-bulk-select",
                              "isDisabled": true,
                              "items": Array [
                                Object {
                                  "onClick": [Function],
                                  "title": "Select none (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select page (3)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select all (3)",
                                },
                              ],
                              "onSelect": [Function],
                              "toggleProps": null,
                            }
                          }
                          component="section"
                          customFilters={
                            Object {
                              "filter": Object {
                                "system_profile": Object {},
                              },
                              "tags": undefined,
                            }
                          }
                          fallback={
                            <Bullseye
                              className="pf-u-p-lg"
                            >
                              <Spinner
                                size="xl"
                              />
                            </Bullseye>
                          }
                          getEntities={[Function]}
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          innerRef={null}
                          noDetail={true}
                          onLoad={[Function]}
                          showTags={true}
                          store={
                            Object {
                              "clearActions": [Function],
                              "dispatch": [Function],
                              "getActions": [Function],
                              "getState": [Function],
                              "replaceReducer": [Function],
                              "subscribe": [Function],
                            }
                          }
                          tableProps={
                            Object {
                              "canSelectAll": false,
                              "className": "inventory-align",
                              "isStickyHeader": true,
                              "ouiaId": "systems-table",
                              "selectVariant": "checkbox",
                            }
                          }
                        />
                      }
                      appName="inventory"
                      bulkSelect={
                        Object {
                          "checked": false,
                          "count": 0,
                          "id": "systems-bulk-select",
                          "isDisabled": true,
                          "items": Array [
                            Object {
                              "onClick": [Function],
                              "title": "Select none (0)",
                            },
                            Object {
                              "onClick": [Function],
                              "title": "Select page (3)",
                            },
                            Object {
                              "onClick": [Function],
                              "title": "Select all (3)",
                            },
                          ],
                          "onSelect": [Function],
                          "toggleProps": null,
                        }
                      }
                      component="section"
                      customFilters={
                        Object {
                          "filter": Object {
                            "system_profile": Object {},
                          },
                          "tags": undefined,
                        }
                      }
                      fallback={
                        <Bullseye
                          className="pf-u-p-lg"
                        >
                          <Spinner
                            size="xl"
                          />
                        </Bullseye>
                      }
                      getEntities={[Function]}
                      history={
                        Object {
                          "action": "POP",
                          "block": [Function],
                          "canGo": [Function],
                          "createHref": [Function],
                          "entries": Array [
                            Object {
                              "hash": "",
                              "pathname": "/",
                              "search": "",
                              "state": undefined,
                            },
                          ],
                          "go": [Function],
                          "goBack": [Function],
                          "goForward": [Function],
                          "index": 0,
                          "length": 1,
                          "listen": [Function],
                          "location": Object {
                            "hash": "",
                            "pathname": "/",
                            "search": "",
                            "state": undefined,
                          },
                          "push": [Function],
                          "replace": [Function],
                        }
                      }
                      innerRef={null}
                      module="./InventoryTable"
                      noDetail={true}
                      onLoad={[Function]}
                      scope="inventory"
                      showTags={true}
                      store={
                        Object {
                          "clearActions": [Function],
                          "dispatch": [Function],
                          "getActions": [Function],
                          "getState": [Function],
                          "replaceReducer": [Function],
                          "subscribe": [Function],
                        }
                      }
                      tableProps={
                        Object {
                          "canSelectAll": false,
                          "className": "inventory-align",
                          "isStickyHeader": true,
                          "ouiaId": "systems-table",
                          "selectVariant": "checkbox",
                        }
                      }
                    >
                      <BaseScalprumComponent
                        ErrorComponent={
                          <InventoryLoadError
                            bulkSelect={
                              Object {
                                "checked": false,
                                "count": 0,
                                "id": "systems-bulk-select",
                                "isDisabled": true,
                                "items": Array [
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select none (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select page (3)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select all (3)",
                                  },
                                ],
                                "onSelect": [Function],
                                "toggleProps": null,
                              }
                            }
                            component="section"
                            customFilters={
                              Object {
                                "filter": Object {
                                  "system_profile": Object {},
                                },
                                "tags": undefined,
                              }
                            }
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                            getEntities={[Function]}
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            innerRef={null}
                            noDetail={true}
                            onLoad={[Function]}
                            showTags={true}
                            store={
                              Object {
                                "clearActions": [Function],
                                "dispatch": [Function],
                                "getActions": [Function],
                                "getState": [Function],
                                "replaceReducer": [Function],
                                "subscribe": [Function],
                              }
                            }
                            tableProps={
                              Object {
                                "canSelectAll": false,
                                "className": "inventory-align",
                                "isStickyHeader": true,
                                "ouiaId": "systems-table",
                                "selectVariant": "checkbox",
                              }
                            }
                          />
                        }
                        appName="inventory"
                        bulkSelect={
                          Object {
                            "checked": false,
                            "count": 0,
                            "id": "systems-bulk-select",
                            "isDisabled": true,
                            "items": Array [
                              Object {
                                "onClick": [Function],
                                "title": "Select none (0)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select page (3)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select all (3)",
                              },
                            ],
                            "onSelect": [Function],
                            "toggleProps": null,
                          }
                        }
                        component="section"
                        customFilters={
                          Object {
                            "filter": Object {
                              "system_profile": Object {},
                            },
                            "tags": undefined,
                          }
                        }
                        fallback={
                          <Bullseye
                            className="pf-u-p-lg"
                          >
                            <Spinner
                              size="xl"
                            />
                          </Bullseye>
                        }
                        getEntities={[Function]}
                        history={
                          Object {
                            "action": "POP",
                            "block": [Function],
                            "canGo": [Function],
                            "createHref": [Function],
                            "entries": Array [
                              Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                            ],
                            "go": [Function],
                            "goBack": [Function],
                            "goForward": [Function],
                            "index": 0,
                            "length": 1,
                            "listen": [Function],
                            "location": Object {
                              "hash": "",
                              "pathname": "/",
                              "search": "",
                              "state": undefined,
                            },
                            "push": [Function],
                            "replace": [Function],
                          }
                        }
                        innerRef={null}
                        module="./InventoryTable"
                        noDetail={true}
                        onLoad={[Function]}
                        scope="inventory"
                        showTags={true}
                        store={
                          Object {
                            "clearActions": [Function],
                            "dispatch": [Function],
                            "getActions": [Function],
                            "getState": [Function],
                            "replaceReducer": [Function],
                            "subscribe": [Function],
                          }
                        }
                        tableProps={
                          Object {
                            "canSelectAll": false,
                            "className": "inventory-align",
                            "isStickyHeader": true,
                            "ouiaId": "systems-table",
                            "selectVariant": "checkbox",
                          }
                        }
                      >
                        <LoadModule
                          ErrorComponent={[Function]}
                          appName="inventory"
                          bulkSelect={
                            Object {
                              "checked": false,
                              "count": 0,
                              "id": "systems-bulk-select",
                              "isDisabled": true,
                              "items": Array [
                                Object {
                                  "onClick": [Function],
                                  "title": "Select none (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select page (3)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select all (3)",
                                },
                              ],
                              "onSelect": [Function],
                              "toggleProps": null,
                            }
                          }
                          component="section"
                          customFilters={
                            Object {
                              "filter": Object {
                                "system_profile": Object {},
                              },
                              "tags": undefined,
                            }
                          }
                          fallback={
                            <Bullseye
                              className="pf-u-p-lg"
                            >
                              <Spinner
                                size="xl"
                              />
                            </Bullseye>
                          }
                          getEntities={[Function]}
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          innerRef={null}
                          module="./InventoryTable"
                          noDetail={true}
                          onLoad={[Function]}
                          scope="inventory"
                          showTags={true}
                          store={
                            Object {
                              "clearActions": [Function],
                              "dispatch": [Function],
                              "getActions": [Function],
                              "getState": [Function],
                              "replaceReducer": [Function],
                              "subscribe": [Function],
                            }
                          }
                          tableProps={
                            Object {
                              "canSelectAll": false,
                              "className": "inventory-align",
                              "isStickyHeader": true,
                              "ouiaId": "systems-table",
                              "selectVariant": "checkbox",
                            }
                          }
                        >
                          <Suspense
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                          >
                            <_default
                              bulkSelect={
                                Object {
                                  "checked": false,
                                  "count": 0,
                                  "id": "systems-bulk-select",
                                  "isDisabled": true,
                                  "items": Array [
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select none (0)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select page (3)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select all (3)",
                                    },
                                  ],
                                  "onSelect": [Function],
                                  "toggleProps": null,
                                }
                              }
                              component="section"
                              customFilters={
                                Object {
                                  "filter": Object {
                                    "system_profile": Object {},
                                  },
                                  "tags": undefined,
                                }
                              }
                              getEntities={[Function]}
                              history={
                                Object {
                                  "action": "POP",
                                  "block": [Function],
                                  "canGo": [Function],
                                  "createHref": [Function],
                                  "entries": Array [
                                    Object {
                                      "hash": "",
                                      "pathname": "/",
                                      "search": "",
                                      "state": undefined,
                                    },
                                  ],
                                  "go": [Function],
                                  "goBack": [Function],
                                  "goForward": [Function],
                                  "index": 0,
                                  "length": 1,
                                  "listen": [Function],
                                  "location": Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                  "push": [Function],
                                  "replace": [Function],
                                }
                              }
                              noDetail={true}
                              onLoad={[Function]}
                              showTags={true}
                              store={
                                Object {
                                  "clearActions": [Function],
                                  "dispatch": [Function],
                                  "getActions": [Function],
                                  "getState": [Function],
                                  "replaceReducer": [Function],
                                  "subscribe": [Function],
                                }
                              }
                              tableProps={
                                Object {
                                  "canSelectAll": false,
                                  "className": "inventory-align",
                                  "isStickyHeader": true,
                                  "ouiaId": "systems-table",
                                  "selectVariant": "checkbox",
                                }
                              }
                            >
                              <div>
                                <h1>
                                  Inventory mock
                                </h1>
                              </div>
                            </_default>
                          </Suspense>
                        </LoadModule>
                      </BaseScalprumComponent>
                    </ForwardRef>
                  </Suspense>
                </section>
              </BaseInvTable>
            </ForwardRef>
          </div>
        </SystemsTable>
      </Connect(SystemsTable)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`ConnectedSystemsTable should render correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(SystemsTable)
        bulkSelectDisabled={false}
        createBaselineModal={false}
        entities={
          Object {
            "columns": Array [
              Object {
                "key": "display_name",
                "title": "Name",
              },
              Object {
                "key": "tags",
                "title": "Tags",
              },
              Object {
                "key": "updated",
                "title": "Last seen",
              },
              Object {
                "key": "historical_profiles",
                "title": "Historical profiles",
              },
            ],
            "count": 3,
            "rows": Array [
              Object {
                "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:56.253419+00:00",
              },
              Object {
                "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.952780+00:00",
              },
              Object {
                "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.686193+00:00",
              },
            ],
            "selectedSystemIds": Array [],
            "total": 3,
          }
        }
        hasHistoricalDropdown={false}
        hasMultiSelect={true}
        historicalProfiles={Array []}
        permissions={
          Object {
            "inventoryRead": true,
          }
        }
        selectVariant="checkbox"
        selectedSystemIds={Array []}
      >
        <SystemsTable
          bulkSelectDisabled={false}
          createBaselineModal={false}
          driftClearFilters={[Function]}
          entities={
            Object {
              "columns": Array [
                Object {
                  "key": "display_name",
                  "title": "Name",
                },
                Object {
                  "key": "tags",
                  "title": "Tags",
                },
                Object {
                  "key": "updated",
                  "title": "Last seen",
                },
                Object {
                  "key": "historical_profiles",
                  "title": "Historical profiles",
                },
              ],
              "count": 3,
              "rows": Array [
                Object {
                  "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                  "tags": Array [
                    Object {
                      "key": "group",
                      "namespace": "insights-client",
                      "value": "XmygroupX",
                    },
                  ],
                  "updated": "2020-10-13T16:17:56.253419+00:00",
                },
                Object {
                  "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                  "tags": Array [
                    Object {
                      "key": "group",
                      "namespace": "insights-client",
                      "value": "XmygroupX",
                    },
                  ],
                  "updated": "2020-10-13T16:17:54.952780+00:00",
                },
                Object {
                  "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                  "tags": Array [
                    Object {
                      "key": "group",
                      "namespace": "insights-client",
                      "value": "XmygroupX",
                    },
                  ],
                  "updated": "2020-10-13T16:17:54.686193+00:00",
                },
              ],
              "selectedSystemIds": Array [],
              "total": 3,
            }
          }
          hasHistoricalDropdown={false}
          hasMultiSelect={true}
          historicalProfiles={Array []}
          permissions={
            Object {
              "inventoryRead": true,
            }
          }
          selectEntities={[Function]}
          selectHistoricProfiles={[Function]}
          selectSingleHSP={[Function]}
          selectVariant="checkbox"
          selectedSystemIds={Array []}
          setSelectedSystemIds={[Function]}
        >
          <div
            className="inventory-toolbar-no-padding"
          >
            <ForwardRef
              bulkSelect={
                Object {
                  "checked": false,
                  "count": 0,
                  "id": "systems-bulk-select",
                  "isDisabled": false,
                  "items": Array [
                    Object {
                      "onClick": [Function],
                      "title": "Select none (0)",
                    },
                    Object {
                      "onClick": [Function],
                      "title": "Select page (3)",
                    },
                    Object {
                      "onClick": [Function],
                      "title": "Select all (3)",
                    },
                  ],
                  "onSelect": [Function],
                  "toggleProps": null,
                }
              }
              component="section"
              customFilters={
                Object {
                  "filter": Object {
                    "system_profile": Object {},
                  },
                  "tags": undefined,
                }
              }
              fallback={
                <Bullseye
                  className="pf-u-p-lg"
                >
                  <Spinner
                    size="xl"
                  />
                </Bullseye>
              }
              getEntities={[Function]}
              noDetail={true}
              onLoad={[Function]}
              showTags={true}
              tableProps={
                Object {
                  "canSelectAll": false,
                  "className": "inventory-align",
                  "isStickyHeader": true,
                  "ouiaId": "systems-table",
                  "selectVariant": "checkbox",
                }
              }
            >
              <BaseInvTable
                bulkSelect={
                  Object {
                    "checked": false,
                    "count": 0,
                    "id": "systems-bulk-select",
                    "isDisabled": false,
                    "items": Array [
                      Object {
                        "onClick": [Function],
                        "title": "Select none (0)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Select page (3)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Select all (3)",
                      },
                    ],
                    "onSelect": [Function],
                    "toggleProps": null,
                  }
                }
                component="section"
                customFilters={
                  Object {
                    "filter": Object {
                      "system_profile": Object {},
                    },
                    "tags": undefined,
                  }
                }
                fallback={
                  <Bullseye
                    className="pf-u-p-lg"
                  >
                    <Spinner
                      size="xl"
                    />
                  </Bullseye>
                }
                getEntities={[Function]}
                innerRef={null}
                noDetail={true}
                onLoad={[Function]}
                showTags={true}
                tableProps={
                  Object {
                    "canSelectAll": false,
                    "className": "inventory-align",
                    "isStickyHeader": true,
                    "ouiaId": "systems-table",
                    "selectVariant": "checkbox",
                  }
                }
              >
                <section
                  className="inventory"
                >
                  <Suspense
                    fallback={
                      <Bullseye
                        className="pf-u-p-lg"
                      >
                        <Spinner
                          size="xl"
                        />
                      </Bullseye>
                    }
                  >
                    <ForwardRef
                      ErrorComponent={
                        <InventoryLoadError
                          bulkSelect={
                            Object {
                              "checked": false,
                              "count": 0,
                              "id": "systems-bulk-select",
                              "isDisabled": false,
                              "items": Array [
                                Object {
                                  "onClick": [Function],
                                  "title": "Select none (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select page (3)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select all (3)",
                                },
                              ],
                              "onSelect": [Function],
                              "toggleProps": null,
                            }
                          }
                          component="section"
                          customFilters={
                            Object {
                              "filter": Object {
                                "system_profile": Object {},
                              },
                              "tags": undefined,
                            }
                          }
                          fallback={
                            <Bullseye
                              className="pf-u-p-lg"
                            >
                              <Spinner
                                size="xl"
                              />
                            </Bullseye>
                          }
                          getEntities={[Function]}
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          innerRef={null}
                          noDetail={true}
                          onLoad={[Function]}
                          showTags={true}
                          store={
                            Object {
                              "clearActions": [Function],
                              "dispatch": [Function],
                              "getActions": [Function],
                              "getState": [Function],
                              "replaceReducer": [Function],
                              "subscribe": [Function],
                            }
                          }
                          tableProps={
                            Object {
                              "canSelectAll": false,
                              "className": "inventory-align",
                              "isStickyHeader": true,
                              "ouiaId": "systems-table",
                              "selectVariant": "checkbox",
                            }
                          }
                        />
                      }
                      appName="inventory"
                      bulkSelect={
                        Object {
                          "checked": false,
                          "count": 0,
                          "id": "systems-bulk-select",
                          "isDisabled": false,
                          "items": Array [
                            Object {
                              "onClick": [Function],
                              "title": "Select none (0)",
                            },
                            Object {
                              "onClick": [Function],
                              "title": "Select page (3)",
                            },
                            Object {
                              "onClick": [Function],
                              "title": "Select all (3)",
                            },
                          ],
                          "onSelect": [Function],
                          "toggleProps": null,
                        }
                      }
                      component="section"
                      customFilters={
                        Object {
                          "filter": Object {
                            "system_profile": Object {},
                          },
                          "tags": undefined,
                        }
                      }
                      fallback={
                        <Bullseye
                          className="pf-u-p-lg"
                        >
                          <Spinner
                            size="xl"
                          />
                        </Bullseye>
                      }
                      getEntities={[Function]}
                      history={
                        Object {
                          "action": "POP",
                          "block": [Function],
                          "canGo": [Function],
                          "createHref": [Function],
                          "entries": Array [
                            Object {
                              "hash": "",
                              "pathname": "/",
                              "search": "",
                              "state": undefined,
                            },
                          ],
                          "go": [Function],
                          "goBack": [Function],
                          "goForward": [Function],
                          "index": 0,
                          "length": 1,
                          "listen": [Function],
                          "location": Object {
                            "hash": "",
                            "pathname": "/",
                            "search": "",
                            "state": undefined,
                          },
                          "push": [Function],
                          "replace": [Function],
                        }
                      }
                      innerRef={null}
                      module="./InventoryTable"
                      noDetail={true}
                      onLoad={[Function]}
                      scope="inventory"
                      showTags={true}
                      store={
                        Object {
                          "clearActions": [Function],
                          "dispatch": [Function],
                          "getActions": [Function],
                          "getState": [Function],
                          "replaceReducer": [Function],
                          "subscribe": [Function],
                        }
                      }
                      tableProps={
                        Object {
                          "canSelectAll": false,
                          "className": "inventory-align",
                          "isStickyHeader": true,
                          "ouiaId": "systems-table",
                          "selectVariant": "checkbox",
                        }
                      }
                    >
                      <BaseScalprumComponent
                        ErrorComponent={
                          <InventoryLoadError
                            bulkSelect={
                              Object {
                                "checked": false,
                                "count": 0,
                                "id": "systems-bulk-select",
                                "isDisabled": false,
                                "items": Array [
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select none (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select page (3)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select all (3)",
                                  },
                                ],
                                "onSelect": [Function],
                                "toggleProps": null,
                              }
                            }
                            component="section"
                            customFilters={
                              Object {
                                "filter": Object {
                                  "system_profile": Object {},
                                },
                                "tags": undefined,
                              }
                            }
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                            getEntities={[Function]}
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            innerRef={null}
                            noDetail={true}
                            onLoad={[Function]}
                            showTags={true}
                            store={
                              Object {
                                "clearActions": [Function],
                                "dispatch": [Function],
                                "getActions": [Function],
                                "getState": [Function],
                                "replaceReducer": [Function],
                                "subscribe": [Function],
                              }
                            }
                            tableProps={
                              Object {
                                "canSelectAll": false,
                                "className": "inventory-align",
                                "isStickyHeader": true,
                                "ouiaId": "systems-table",
                                "selectVariant": "checkbox",
                              }
                            }
                          />
                        }
                        appName="inventory"
                        bulkSelect={
                          Object {
                            "checked": false,
                            "count": 0,
                            "id": "systems-bulk-select",
                            "isDisabled": false,
                            "items": Array [
                              Object {
                                "onClick": [Function],
                                "title": "Select none (0)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select page (3)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select all (3)",
                              },
                            ],
                            "onSelect": [Function],
                            "toggleProps": null,
                          }
                        }
                        component="section"
                        customFilters={
                          Object {
                            "filter": Object {
                              "system_profile": Object {},
                            },
                            "tags": undefined,
                          }
                        }
                        fallback={
                          <Bullseye
                            className="pf-u-p-lg"
                          >
                            <Spinner
                              size="xl"
                            />
                          </Bullseye>
                        }
                        getEntities={[Function]}
                        history={
                          Object {
                            "action": "POP",
                            "block": [Function],
                            "canGo": [Function],
                            "createHref": [Function],
                            "entries": Array [
                              Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                            ],
                            "go": [Function],
                            "goBack": [Function],
                            "goForward": [Function],
                            "index": 0,
                            "length": 1,
                            "listen": [Function],
                            "location": Object {
                              "hash": "",
                              "pathname": "/",
                              "search": "",
                              "state": undefined,
                            },
                            "push": [Function],
                            "replace": [Function],
                          }
                        }
                        innerRef={null}
                        module="./InventoryTable"
                        noDetail={true}
                        onLoad={[Function]}
                        scope="inventory"
                        showTags={true}
                        store={
                          Object {
                            "clearActions": [Function],
                            "dispatch": [Function],
                            "getActions": [Function],
                            "getState": [Function],
                            "replaceReducer": [Function],
                            "subscribe": [Function],
                          }
                        }
                        tableProps={
                          Object {
                            "canSelectAll": false,
                            "className": "inventory-align",
                            "isStickyHeader": true,
                            "ouiaId": "systems-table",
                            "selectVariant": "checkbox",
                          }
                        }
                      >
                        <LoadModule
                          ErrorComponent={[Function]}
                          appName="inventory"
                          bulkSelect={
                            Object {
                              "checked": false,
                              "count": 0,
                              "id": "systems-bulk-select",
                              "isDisabled": false,
                              "items": Array [
                                Object {
                                  "onClick": [Function],
                                  "title": "Select none (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select page (3)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select all (3)",
                                },
                              ],
                              "onSelect": [Function],
                              "toggleProps": null,
                            }
                          }
                          component="section"
                          customFilters={
                            Object {
                              "filter": Object {
                                "system_profile": Object {},
                              },
                              "tags": undefined,
                            }
                          }
                          fallback={
                            <Bullseye
                              className="pf-u-p-lg"
                            >
                              <Spinner
                                size="xl"
                              />
                            </Bullseye>
                          }
                          getEntities={[Function]}
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          innerRef={null}
                          module="./InventoryTable"
                          noDetail={true}
                          onLoad={[Function]}
                          scope="inventory"
                          showTags={true}
                          store={
                            Object {
                              "clearActions": [Function],
                              "dispatch": [Function],
                              "getActions": [Function],
                              "getState": [Function],
                              "replaceReducer": [Function],
                              "subscribe": [Function],
                            }
                          }
                          tableProps={
                            Object {
                              "canSelectAll": false,
                              "className": "inventory-align",
                              "isStickyHeader": true,
                              "ouiaId": "systems-table",
                              "selectVariant": "checkbox",
                            }
                          }
                        >
                          <Suspense
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                          >
                            <_default
                              bulkSelect={
                                Object {
                                  "checked": false,
                                  "count": 0,
                                  "id": "systems-bulk-select",
                                  "isDisabled": false,
                                  "items": Array [
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select none (0)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select page (3)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select all (3)",
                                    },
                                  ],
                                  "onSelect": [Function],
                                  "toggleProps": null,
                                }
                              }
                              component="section"
                              customFilters={
                                Object {
                                  "filter": Object {
                                    "system_profile": Object {},
                                  },
                                  "tags": undefined,
                                }
                              }
                              getEntities={[Function]}
                              history={
                                Object {
                                  "action": "POP",
                                  "block": [Function],
                                  "canGo": [Function],
                                  "createHref": [Function],
                                  "entries": Array [
                                    Object {
                                      "hash": "",
                                      "pathname": "/",
                                      "search": "",
                                      "state": undefined,
                                    },
                                  ],
                                  "go": [Function],
                                  "goBack": [Function],
                                  "goForward": [Function],
                                  "index": 0,
                                  "length": 1,
                                  "listen": [Function],
                                  "location": Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                  "push": [Function],
                                  "replace": [Function],
                                }
                              }
                              noDetail={true}
                              onLoad={[Function]}
                              showTags={true}
                              store={
                                Object {
                                  "clearActions": [Function],
                                  "dispatch": [Function],
                                  "getActions": [Function],
                                  "getState": [Function],
                                  "replaceReducer": [Function],
                                  "subscribe": [Function],
                                }
                              }
                              tableProps={
                                Object {
                                  "canSelectAll": false,
                                  "className": "inventory-align",
                                  "isStickyHeader": true,
                                  "ouiaId": "systems-table",
                                  "selectVariant": "checkbox",
                                }
                              }
                            >
                              <div>
                                <h1>
                                  Inventory mock
                                </h1>
                              </div>
                            </_default>
                          </Suspense>
                        </LoadModule>
                      </BaseScalprumComponent>
                    </ForwardRef>
                  </Suspense>
                </section>
              </BaseInvTable>
            </ForwardRef>
          </div>
        </SystemsTable>
      </Connect(SystemsTable)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`ConnectedSystemsTable should render correctly with no inventory read permissions 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(SystemsTable)
        bulkSelectDisabled={false}
        createBaselineModal={false}
        entities={
          Object {
            "columns": Array [
              Object {
                "key": "display_name",
                "title": "Name",
              },
              Object {
                "key": "tags",
                "title": "Tags",
              },
              Object {
                "key": "updated",
                "title": "Last seen",
              },
              Object {
                "key": "historical_profiles",
                "title": "Historical profiles",
              },
            ],
            "count": 3,
            "rows": Array [
              Object {
                "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:56.253419+00:00",
              },
              Object {
                "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.952780+00:00",
              },
              Object {
                "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.686193+00:00",
              },
            ],
            "selectedSystemIds": Array [],
            "total": 3,
          }
        }
        hasHistoricalDropdown={false}
        hasMultiSelect={true}
        historicalProfiles={Array []}
        permissions={
          Object {
            "inventoryRead": false,
          }
        }
        selectVariant="checkbox"
        selectedSystemIds={Array []}
      >
        <SystemsTable
          bulkSelectDisabled={false}
          createBaselineModal={false}
          driftClearFilters={[Function]}
          entities={
            Object {
              "columns": Array [
                Object {
                  "key": "display_name",
                  "title": "Name",
                },
                Object {
                  "key": "tags",
                  "title": "Tags",
                },
                Object {
                  "key": "updated",
                  "title": "Last seen",
                },
                Object {
                  "key": "historical_profiles",
                  "title": "Historical profiles",
                },
              ],
              "count": 3,
              "rows": Array [
                Object {
                  "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                  "tags": Array [
                    Object {
                      "key": "group",
                      "namespace": "insights-client",
                      "value": "XmygroupX",
                    },
                  ],
                  "updated": "2020-10-13T16:17:56.253419+00:00",
                },
                Object {
                  "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                  "tags": Array [
                    Object {
                      "key": "group",
                      "namespace": "insights-client",
                      "value": "XmygroupX",
                    },
                  ],
                  "updated": "2020-10-13T16:17:54.952780+00:00",
                },
                Object {
                  "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                  "tags": Array [
                    Object {
                      "key": "group",
                      "namespace": "insights-client",
                      "value": "XmygroupX",
                    },
                  ],
                  "updated": "2020-10-13T16:17:54.686193+00:00",
                },
              ],
              "selectedSystemIds": Array [],
              "total": 3,
            }
          }
          hasHistoricalDropdown={false}
          hasMultiSelect={true}
          historicalProfiles={Array []}
          permissions={
            Object {
              "inventoryRead": false,
            }
          }
          selectEntities={[Function]}
          selectHistoricProfiles={[Function]}
          selectSingleHSP={[Function]}
          selectVariant="checkbox"
          selectedSystemIds={Array []}
          setSelectedSystemIds={[Function]}
        >
          <EmptyStateDisplay
            color="#6a6e73"
            icon={[Function]}
            text={
              Array [
                "Contact your organization administrator(s) for more information.",
              ]
            }
            title="You do not have access to the inventory"
          >
            <EmptyState
              variant="large"
            >
              <div
                className="pf-c-empty-state pf-m-lg"
              >
                <div
                  className="pf-c-empty-state__content"
                >
                  <EmptyStateIcon
                    className={null}
                    color="#6a6e73"
                    icon={[Function]}
                  >
                    <LockIcon
                      aria-hidden="true"
                      className="pf-c-empty-state__icon"
                      color="#6a6e73"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden="true"
                        aria-labelledby={null}
                        className="pf-c-empty-state__icon"
                        fill="#6a6e73"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 448 512"
                        width="1em"
                      >
                        <path
                          d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
                        />
                      </svg>
                    </LockIcon>
                  </EmptyStateIcon>
                  <br />
                  <Title
                    headingLevel="h1"
                    size="lg"
                  >
                    <h1
                      className="pf-c-title pf-m-lg"
                      data-ouia-component-id="OUIA-Generated-Title-1"
                      data-ouia-component-type="PF4/Title"
                      data-ouia-safe={true}
                    >
                      You do not have access to the inventory
                    </h1>
                  </Title>
                  <EmptyStateBody>
                    <div
                      className="pf-c-empty-state__body"
                    >
                      Contact your organization administrator(s) for more information.
                      <br />
                    </div>
                  </EmptyStateBody>
                </div>
              </div>
            </EmptyState>
          </EmptyStateDisplay>
        </SystemsTable>
      </Connect(SystemsTable)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`ConnectedSystemsTable should render radio correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(SystemsTable)
        hasInventoryReadPermissions={true}
      >
        <SystemsTable
          driftClearFilters={[Function]}
          hasInventoryReadPermissions={true}
          selectEntities={[Function]}
          selectHistoricProfiles={[Function]}
          selectedSystemIds={Array []}
          setSelectedSystemIds={[Function]}
          updateColumns={[Function]}
        >
          <Spinner
            size="lg"
          >
            <span
              aria-valuetext="Loading..."
              className="pf-c-spinner pf-m-lg"
              role="progressbar"
            >
              <span
                className="pf-c-spinner__clipper"
              />
              <span
                className="pf-c-spinner__lead-ball"
              />
              <span
                className="pf-c-spinner__tail-ball"
              />
            </span>
          </Spinner>
        </SystemsTable>
      </Connect(SystemsTable)>
    </Provider>
  </Router>
</MemoryRouter>
`;
